18-06-2020-See_More function in modals

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -245,11 +245,11 @@
                                     </div>
                                 </div>
 
-                                <ng-template #contact let-modal>
+                                <ng-template  #contact let-modal>
                                     <button type="button" style="border: rgb(255, 255, 255);" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
                                         <span aria-hidden="true" style="border: rgb(255, 255, 255); float:right;">&times;</span>
                                     </button>
-                                    <div class="" style="background-image: url(images/logocm.png); background-repeat: no-repeat; background-position: center center; background-size: 60%; width: 50%; height: 150px; margin: 0 auto; background-color: #fff; ">
+                                    <div class="" style="background-image: url(../assets/images/logo-naranja.png); background-repeat: no-repeat; background-position: center center; background-size: 60%; width: 50%; height: 150px; margin: 0 auto; background-color: #fff; ">
                                         <span> {{'Contact.TITLE'|translate}}</span>
                                     </div>
                                     <!-- Post Comment -->
@@ -274,7 +274,7 @@
                                     <!-- Post Comment -->
                                     <div class="cui_row">
                                         <div class="cui_row" style="background-color: #ffffff; padding: 20px; padding-bottom: 40px; border-radius: 5px;">
-                                            <div class="" style="background-image: url(images/logocm.png); background-repeat: no-repeat; background-position: center center; background-size: 60%; width: 50%; height: 150px; margin: 0 auto; background-color: #fff; ">
+                                            <div class="" style="background-image: url(../assets/images/logo-naranja.png); background-repeat: no-repeat; background-position: center center; background-size: 60%; width: 50%; height: 150px; margin: 0 auto; background-color: #fff; ">
                                                 <span> {{'About.TITLE'|translate}}</span>
                                             </div>
                                             <p style="text-align:left; line-height:1.6em;" [innerHTML]="'About.TEXT'|translate">
@@ -292,7 +292,7 @@
                                     <!-- Post Comment -->
                                     <div class="cui_row">
                                         <div class="cui_row" style="background-color: #ffffff; padding: 20px; padding-bottom: 40px; border-radius: 5px;">
-                                            <div class="" style="background-image: url(images/logocm.png); background-repeat: no-repeat; background-position: center center; background-size: 60%; width: 50%; height: 150px; margin: 0 auto; background-color: #fff; ">
+                                            <div class="" style="background-image: url(../assets/images/logo-naranja.png); background-repeat: no-repeat; background-position: center center; background-size: 60%; width: 50%; height: 150px; margin: 0 auto; background-color: #fff; ">
                                                 <span> {{'News.TITLE'|translate}}</span>
                                             </div>
                                             <p style="text-align:left; line-height:1.6em;" [innerHTML]="'News.TEXT'|translate">
@@ -309,7 +309,7 @@
                                     <!-- Post Comment -->
                                     <div class="cui_row">
                                         <div class="cui_row" style="background-color: #ffffff; padding: 20px; padding-bottom: 40px; border-radius: 5px;">
-                                            <div class="" style="background-image: url(images/logocm.png); background-repeat: no-repeat; background-position: center center; background-size: 60%; width: 50%; height: 150px; margin: 0 auto; background-color: #fff; ">
+                                            <div class="" style="background-image: url(../assets/images/logo-naranja.png); background-repeat: no-repeat; background-position: center center; background-size: 60%; width: 50%; height: 150px; margin: 0 auto; background-color: #fff; ">
                                                 <span style="text-align: center;"> {{'RelatedSites.TITLE'|translate}}
                                                 </span>
                                             </div>
