--- a/src/app/generic/gallery-list/gallery-list.component.html
+++ b/src/app/generic/gallery-list/gallery-list.component.html
@@ -21,81 +21,132 @@
             </h2>
         </div>
         <a (click)="open(itemModal,item)">
-            <img class="card-img-top" src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{foldername}}/{{item.imagen}}/{{section}}/{{baseFolder}}" alt="">
+            <img class="card-img-top"
+                src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{foldername}}/{{item.imagen}}/{{section}}/{{baseFolder}}"
+                alt="">
         </a>
 
         <!-- Icons made by <a href="https://roundicons.com/" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
-        <ng-template #itemModal let-modal>
+        <ng-template #itemModal let-modal class="wnd">
             <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
                 <span aria-hidden="true" style="float:right;">&times;</span>
             </button>
             <!-- Post Comment -->
             <div class="cui_row">
-                <div class="cui_row" style="background-color: #ffffff; padding: 20px; padding-bottom: 20px; border-radius: 5px;">
-                    <div class="col text-center" style="background-size: 60%; width: 100%; height: 50px; margin: 0 auto; background-color: #fff; ">
-                        <span style="text-align: center; color: black;font-weight: bold;" [innerHTML]="actualItem.nombre">:</span><span style="text-align: center; color: black;font-weight: bold;" [innerHTML]="actualItem.titulo"></span>
+                <div class="cui_row"
+                    style="background-color: #ffffff; padding: 20px; padding-bottom: 20px; border-radius: 5px;">
+                    <div class="col text-center"
+                        style="background-size: 60%; width: 100%; height: 50px; margin: 0 auto; background-color: #fff; ">
+                        <span style="text-align: center; color: black;font-weight: bold;"
+                            [innerHTML]="actualItem.nombre">:</span><span
+                            style="text-align: center; color: black;font-weight: bold;"
+                            [innerHTML]="actualItem.titulo"></span>
                     </div>
                     <div>
-                        <a class="carousel-control-prev" (click)="preview('itemModal')" role="button" data-slide="prev" style="z-index: 1; ">
+                        <a class="carousel-control-prev" (click)="preview('itemModal')" role="button" data-slide="prev"
+                            style="z-index: 1; ">
                             <img style="cursor: pointer;
-                            margin-right: 60px;" src="../../../assets/images/left-arrow.png" class="carousel-control-prev-icon" aria-hidden="true">
+                            margin-right: 60px;" src="../../../assets/images/left-arrow.png"
+                                class="carousel-control-prev-icon" aria-hidden="true">
                         </a>
 
-                        <img (click)="open(zoom,actualItem)" class="col text-center" style="bottom: 10px; max-width: 500px; max-height: 500px;" src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{foldername}}/{{actualItem.imagen}}/{{section}}/{{baseFolder}}" alt="">
+                        <img (click)="open(zoom,actualItem)" [title]="'Imagen.Zoom'|translate" class="col text-center"
+                            style="bottom: 10px; max-width: 500px; max-height: 500px;"
+                            src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{foldername}}/{{actualItem.imagen}}/{{section}}/{{baseFolder}}"
+                            alt="">
 
-                        <a class="carousel-control-next" (click)="next('itemModal')" role="button" style="z-index: 1;" data-slide="next">
+                        <a class="carousel-control-next" (click)="next('itemModal')" role="button" style="z-index: 1;"
+                            data-slide="next">
                             <img style="cursor: pointer;
-                            margin-left: 60px;" src="../../../assets/images/right-arrow.png" class="carousel-control-next-icon" aria-hidden="true">
+                            margin-left: 60px;" src="../../../assets/images/right-arrow.png"
+                                class="carousel-control-next-icon" aria-hidden="true">
                         </a>
                     </div>
-                    <p style="text-align:left; line-height:1.6em; color: black; " [innerHTML]="actualItem.descripcion">
-                    </p>
+                    <div class="cui_descr_nav" *ngIf="!checkLenght(actualItem.descripcion)">
+                        <p style="text-align:left; line-height:1.6em; color: black; "
+                            [innerHTML]="actualItem.descripcion">
+                        </p>
+                    </div>
+                    <div class="cui_descr_nav" id="show_div" [class.hidden]="isHide"  *ngIf="checkLenght(actualItem.descripcion)">
+                        <p style="text-align:left; line-height:1.6em; color: black; "
+                            [innerHTML]="sliceDescription(actualItem.descripcion)">
+                        </p>
+                        <button class="more_text" (click)="see_more()"
+                            style=" text-align: left; font-size: .9em; color:#5c84b5; background-color: transparent; border-style: hidden;">
+                            (Ver más)
+                        </button>
+                    </div>
+                    <div class="cui_descr_nav" id="hidden_div" [class.hidden]="!isHide"   *ngIf="checkLenght(actualItem.descripcion)">
+                        <p style="text-align:left; line-height:1.6em; color: black; "
+                            [innerHTML]="actualItem.descripcion">
+                        </p>
+                        <button class="more_text" (click)="see_more()"
+                            style="text-align: left; font-size: .9em; color:#5c84b5; background-color: transparent; border-style: hidden;">
+                            (Ver menos)
+                        </button>
+                    </div>
                     <div *ngIf="!checkIfIsEmpty(actualItem.emision)">
                         <span style="text-align:left; line-height:1.6em; color: black; font-weight: bold;">Emisión:
-                        </span><span style="text-align:left; line-height:1.6em; color: black;" [innerHTML]="actualItem.emision"></span>
+                        </span><span style="text-align:left; line-height:1.6em; color: black;"
+                            [innerHTML]="actualItem.emision"></span>
                     </div>
                     <div *ngIf="!checkIfIsEmpty(actualItem.color)">
                         <span style="text-align:left; line-height:1.6em; color: black;font-weight: bold;">Color:
-                        </span><span style="text-align:left; line-height:1.6em; color: black;" [innerHTML]="actualItem.color"></span>
+                        </span><span style="text-align:left; line-height:1.6em; color: black;"
+                            [innerHTML]="actualItem.color"></span>
                     </div>
                     <div *ngIf="!checkIfIsEmpty(actualItem.material)">
-                        <span style="text-align:left; line-height:1.6em; color: black;font-weight: bold;">Material:</span><span style="text-align:left; line-height:1.6em; color: black;" [innerHTML]="actualItem.material"></span>
+                        <span
+                            style="text-align:left; line-height:1.6em; color: black;font-weight: bold;">Material:</span><span
+                            style="text-align:left; line-height:1.6em; color: black;"
+                            [innerHTML]="actualItem.material"></span>
                     </div>
                     <div *ngIf="!checkIfIsEmpty(actualItem.impresion)">
                         <span style="text-align:left; line-height:1.6em; color: black;font-weight: bold;">Impresión:
-                        </span><span style="text-align:left; line-height:1.6em;  color: black;" [innerHTML]="actualItem.impresion"></span>
+                        </span><span style="text-align:left; line-height:1.6em;  color: black;"
+                            [innerHTML]="actualItem.impresion"></span>
                     </div>
                     <div *ngIf="!checkIfIsEmpty(actualItem.dimension)">
                         <span style="text-align:left; line-height:1.6em; color: black;font-weight: bold;">Dimensión:
-                        </span><span style="text-align:left; line-height:1.6em;  color: black;" [innerHTML]="actualItem.dimension"></span>
+                        </span><span style="text-align:left; line-height:1.6em;  color: black;"
+                            [innerHTML]="actualItem.dimension"></span>
                     </div>
                     <div *ngIf="!checkIfIsEmpty(actualItem.procedencia)">
                         <span style="text-align:left; line-height:1.6em; color: black;font-weight: bold;">Procedencia:
-                        </span><span style="text-align:left; line-height:1.6em;  color: black;" [innerHTML]="actualItem.procedencia"></span>
+                        </span><span style="text-align:left; line-height:1.6em;  color: black;"
+                            [innerHTML]="actualItem.procedencia"></span>
                     </div>
                     <div *ngIf="!checkIfIsEmpty(actualItem.precio)">
                         <span style="text-align:left; line-height:1.6em; color: black;font-weight: bold; ">Precio:
-                        </span><span style="text-align:left; line-height:1.6em;  color: black;" [innerHTML]="actualItem.precio"></span>
+                        </span><span style="text-align:left; line-height:1.6em;  color: black;"
+                            [innerHTML]="actualItem.precio"></span>
                     </div>
                 </div>
             </div>
             <ng-template #zoom let-modal>
 
                 <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-                        <span aria-hidden="true" style="float:right;">&times;</span>
-                    </button>
-                <div class="cui_row">
-                    <div class="cui_row" style="background-color: #ffffff; padding: 20px; padding-bottom: 20px; border-radius: 5px;">
+                    <span aria-hidden="true" style="float:right;">&times;</span>
+                </button>
+                <div class="cui_row cui_div_zoom">
+                    <div class="cui_row"
+                        style="background-color: #ffffff; padding: 20px; padding-bottom: 20px; border-radius: 5px;">
 
-                        <a class="carousel-control-prev" (click)="preview('zoom')" role="button" data-slide="prev" style="z-index: 1; ">
+                        <a class="carousel-control-prev" (click)="preview('zoom')" role="button" data-slide="prev"
+                            style="z-index: 1; ">
                             <img style="cursor: pointer;
-                            margin-right: 60px;" src="../../../assets/images/left-arrow.png" class="carousel-control-prev-icon" aria-hidden="true">
+                            margin-right: 60px;" src="../../../assets/images/left-arrow.png"
+                                class="carousel-control-prev-icon" aria-hidden="true">
                         </a>
 
-                        <img class="col text-center" style="bottom: 10px; max-width: 100%; max-height: 100%;" src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{foldername}}/{{actualItem.imagen}}/{{section}}/{{baseFolder}}" alt="">
-                        <a class="carousel-control-next" (click)="next('zoom')" role="button" style="z-index: 1;" data-slide="next">
+                        <img class="col text-center" style="bottom: 10px; max-width: 100%; max-height: 100%;"
+                            src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{foldername}}/{{actualItem.imagen}}/{{section}}/{{baseFolder}}"
+                            alt="">
+                        <a class="carousel-control-next" (click)="next('zoom')" role="button" style="z-index: 1;"
+                            data-slide="next">
                             <img style="cursor: pointer;
-                                margin-left: 60px;" src="../../../assets/images/right-arrow.png" class="carousel-control-next-icon" aria-hidden="true">
+                                margin-left: 60px;" src="../../../assets/images/right-arrow.png"
+                                class="carousel-control-next-icon" aria-hidden="true">
                         </a>
                     </div>
                 </div>
@@ -113,7 +164,9 @@
             </h2>
         </div>
         <a (click)="open(vpostModal,item)">
-            <img class="card-img-top" src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{foldername}}/{{item.imagen}}/{{section}}/none" alt="">
+            <img class="card-img-top"
+                src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{foldername}}/{{item.imagen}}/{{section}}/none"
+                alt="">
         </a>
         <ng-template #vpostModal let-modal>
             <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
@@ -121,23 +174,33 @@
             </button>
             <!-- Post Comment -->
             <div class="cui_row">
-                <div class="cui_row" style="background-color: #ffffff; padding: 20px; padding-bottom: 20px; border-radius: 5px;">
-                    <div class="col text-center" style="background-size: 60%; width: 100%; height: 50px; margin: 0 auto; background-color: #fff; ">
-                        <span style="text-align: center; color: black;font-weight: bold;" [innerHTML]="foldername"></span>
+                <div class="cui_row"
+                    style="background-color: #ffffff; padding: 20px; padding-bottom: 20px; border-radius: 5px;">
+                    <div class="col text-center"
+                        style="background-size: 60%; width: 100%; height: 50px; margin: 0 auto; background-color: #fff; ">
+                        <span style="text-align: center; color: black;font-weight: bold;"
+                            [innerHTML]="foldername"></span>
                     </div>
-                    <a class="carousel-control-prev" (click)="previewVpost('vpostModal')" role="button" data-slide="prev" style="z-index: 1; ">
+                    <a class="carousel-control-prev" (click)="previewVpost('vpostModal')" role="button"
+                        data-slide="prev" style="z-index: 1; ">
                         <img style="cursor: pointer;
-                        margin-right: 60px;" src="../../../assets/images/left-arrow.png" class="carousel-control-prev-icon" aria-hidden="true">
+                        margin-right: 60px;" src="../../../assets/images/left-arrow.png"
+                            class="carousel-control-prev-icon" aria-hidden="true">
                     </a>
 
-                    <img class="col text-center" style="bottom: 10px; max-width: 500px; max-height: 500px;" src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{foldername}}/{{actualItem.imagen}}/{{section}}/none" alt="">
-                    <a class="carousel-control-next" (click)="nextVpost('vpostModal')" role="button" style="z-index: 1;" data-slide="next">
+                    <img class="col text-center" style="bottom: 10px; max-width: 500px; max-height: 500px;"
+                        src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{foldername}}/{{actualItem.imagen}}/{{section}}/none"
+                        alt="">
+                    <a class="carousel-control-next" (click)="nextVpost('vpostModal')" role="button" style="z-index: 1;"
+                        data-slide="next">
                         <img style="cursor: pointer;
-                            margin-left: 60px;" src="../../../assets/images/right-arrow.png" class="carousel-control-next-icon" aria-hidden="true">
+                            margin-left: 60px;" src="../../../assets/images/right-arrow.png"
+                            class="carousel-control-next-icon" aria-hidden="true">
                     </a>
                     <div class="col text-center">
                         <a [routerLink]="['/share-vpost', actualItem.idPostal,sonLevel,foldername,section]">
-                            <button type="button" class="btn btn-info" (click)="modal.dismiss('Cross click')">{{'GalleryComponent.Seleccionar'|translate}}</button>
+                            <button type="button" class="btn btn-info"
+                                (click)="modal.dismiss('Cross click')">{{'GalleryComponent.Seleccionar'|translate}}</button>
                         </a>
 
                     </div>
@@ -155,14 +218,17 @@
             </h2>
         </div>
         <a [routerLink]="['/text', item.idMuestra,sonLevel,section]">
-            <img class="card-img-top" src="{{config.serverNodeLocation}}images/none/{{item.carpeta}}/{{item.imagen}}/{{section}}/none" alt="">
+            <img class="card-img-top"
+                src="{{config.serverNodeLocation}}images/none/{{item.carpeta}}/{{item.imagen}}/{{section}}/none" alt="">
         </a>
     </div>
 </ng-template>
 
 <ng-template #textCollection>
     <div class="card card_small_with_image grid-item" *ngFor="let item of gallerylist">
-        <img class="card-img-top" src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{item.carpeta}}/{{item.imagenGaleria}}/{{section}}/{{foldername}}" alt="">
+        <img class="card-img-top"
+            src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{item.carpeta}}/{{item.imagenGaleria}}/{{section}}/{{foldername}}"
+            alt="">
         <div class="card-body">
             <div class="card-title card-title-small">
                 <a [routerLink]="['/text', item.idCategoria,sonLevel,section]">
@@ -182,7 +248,9 @@
             </h2>
         </div>
         <a [routerLink]="['/tale', item.idEstampa, item.nombre]">
-            <img class="card-img-top" src="{{config.serverNodeLocation}}images/none/{{item.carpeta}}/{{item.imagenGaleria}}/{{section}}/none" alt="">
+            <img class="card-img-top"
+                src="{{config.serverNodeLocation}}images/none/{{item.carpeta}}/{{item.imagenGaleria}}/{{section}}/none"
+                alt="">
         </a>
     </div>
 </ng-template>
@@ -195,7 +263,8 @@
             </h2>
         </div>
         <a [routerLink]="['/store', item.idItem,foldername,section]">
-            <img class="card-img-top" src="{{config.serverNodeLocation}}images/none/{{foldername}}/{{item.imagen}}/{{section}}/none" alt="">
+            <img class="card-img-top"
+                src="{{config.serverNodeLocation}}images/none/{{foldername}}/{{item.imagen}}/{{section}}/none" alt="">
         </a>
     </div>
 </ng-template>
