--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -164,16 +164,16 @@
         </div> -->
 
 
-    <div class="page_content">
-        <div class="container">
+    <div class="row page_content">
+        <div class="container col-sm-2">
             <div class="row">
                 <div class="similar_posts_container">
                     <app-category [categoryType]="categoryType.asObservable()"></app-category>
                 </div>
             </div>
         </div>
-        <div class="container">
-            <app-ng7-mat-breadcrumb></app-ng7-mat-breadcrumb>
+        <div class="container col-sm-9">
+            <!-- <app-ng7-mat-breadcrumb></app-ng7-mat-breadcrumb> -->
             <router-outlet></router-outlet>
             <app-scroll-top></app-scroll-top>
         </div>
@@ -259,7 +259,7 @@
                                                 <input id="name" formControlName="name" type="text" class="contact_input contact_input_name" placeholder="{{'Contact.NAME'|translate}}" required="required">
                                                 <input id="email" formControlName="email" type="email" class="contact_input contact_input_email" placeholder="{{'Contact.EMAIL'|translate}}" required="required">
                                                 <textarea id="text" formControlName="text" class="contact_text" placeholder="{{'Contact.TEXT'|translate}}" required="required"></textarea>
-                                                <button type="submit"  class="contact_button">{{'Contact.SEND'|translate}}</button>
+                                                <button type="submit" class="contact_button">{{'Contact.SEND'|translate}}</button>
                                             </form>
                                         </div>
                                     </div>
@@ -278,7 +278,7 @@
                                                 <span> {{'About.TITLE'|translate}}</span>
                                             </div>
                                             <p style="text-align:left; line-height:1.6em;" [innerHTML]="'About.TEXT'|translate">
-                                                
+
                                             </p>
                                         </div>
                                     </div>
@@ -296,7 +296,7 @@
                                                 <span> {{'News.TITLE'|translate}}</span>
                                             </div>
                                             <p style="text-align:left; line-height:1.6em;" [innerHTML]="'News.TEXT'|translate">
-                                              
+
                                             </p>
                                         </div>
                                     </div>
@@ -314,7 +314,7 @@
                                                 </span>
                                             </div>
                                             <p style="text-align:left; line-height:1.6em;" [innerHTML]="'RelatedSites.TEXT'|translate">
-                                             </p>
+                                            </p>
                                         </div>
                                     </div>
                                 </ng-template>
