--- a/src/app/generic/category/category.component.html
+++ b/src/app/generic/category/category.component.html
@@ -1,65 +1,84 @@
 <section class="categories">
     <div class="container">
 
-        <owl-carousel [options]="carouselOptions" [items]="categoryList" [carouselClasses]="['owl-theme', 'row', 'sliding']">
+        <div >
+            <div *ngIf="category === 'collection'; then collection"></div>
+            <div *ngIf="category === 'vpost'; then vpost"></div>
+            <div *ngIf="category === 'store'; then store"></div>
+            <div *ngIf="category === 'samples' ; then otherSection"></div>
+            <div *ngIf="category === 'tales' ; then otherSection"></div>
+        </div>
+
+        <owl-carousel *ngIf="active" [options]="carouselOptions" [items]="categoryList" [carouselClasses]="['owl-theme', 'row', 'sliding']">
             <div *ngIf="category === 'collection'; then collection"></div>
             <div *ngIf="category === 'vpost'; then vpost"></div>
             <div *ngIf="category === 'store'; then store"></div>
             <div *ngIf="category === 'samples' ; then otherSection"></div>
             <div *ngIf="category === 'tales' ; then otherSection"></div>
 
-            <ng-template #collection>
-                <div class="item" *ngFor="let item of categoryList">
-                    <div class="card card-category" style="width: 18rem;">
-                        <img src="{{config.serverNodeLocation}}images/imageForCategory/{{item.imagenMenu}}/{{category}}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" [routerLink]="['/text',item.idSeccion,sonLevel,category]">
-                                <p [innerHTML]="item.nombre"></p>
-                            </h5>
-                        </div>
-                    </div>
-                </div>
-            </ng-template>
-
-            <ng-template #otherSection>
-                <div class="item" *ngFor="let item of categoryList">
-                    <div class="card" style="width: 18rem;">
-                        <img src="{{config.serverNodeLocation}}images/imageForCategory/{{item.imagenMenu}}/{{category}}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" [routerLink]="['/gallery',item.idCategoriaEstampa,sonLevel,category]">
-                                <p [innerHTML]="item.nombre"></p>
-                            </h5>
-                        </div>
-                    </div>
-                </div>
-            </ng-template>
-
-            <ng-template #vpost>
-                <div class="item" *ngFor="let item of categoryList">
-                    <div class="card" style="width: 18rem;">
-                        <img src="{{config.serverNodeLocation}}images/imageForCategory/{{item.imagenMenu}}/{{category}}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" [routerLink]="['/gallery',item.idCategoriaPostal,sonLevel,category, item.nombre]">
-                                <p [innerHTML]="item.nombre"></p>
-                            </h5>
-                        </div>
-                    </div>
-                </div>
-
-            </ng-template>
-            <ng-template #store>
-                <div class="item" *ngFor="let item of categoryList">
-                    <div class="card" style="width: 18rem;">
-                        <img src="{{config.serverNodeLocation}}images/imageForCategory/{{item.imagenMenu}}/{{category}}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title" [routerLink]="['/gallery',item.idTematica,sonLevel,category, item.nombre]">
-                                <p [innerHTML]="item.nombre"></p>
-                            </h5>
-                        </div>
-                    </div>
-                </div>
-            </ng-template>
+            
         </owl-carousel>
+
+        <ng-template #collection>
+            <div class="colum-list" *ngFor="let item of categoryList">
+                <div class="card card-category">
+                    <a [routerLink]="['/text',item.idSeccion,sonLevel,category]">
+                        <img src="{{config.serverNodeLocation}}images/imageForCategory/{{item.imagenMenu}}/{{category}}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <p [innerHTML]="item.nombre"></p>
+                            </h5>
+                        </div>
+                    </a>
+
+                </div>
+            </div>
+        </ng-template>
+
+        <ng-template #otherSection>
+            <div class="colum-list" *ngFor="let item of categoryList">
+                <div class="card">
+                    <a [routerLink]="['/gallery',item.idCategoriaEstampa,sonLevel,category]">
+                        <img src="{{config.serverNodeLocation}}images/imageForCategory/{{item.imagenMenu}}/{{category}}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <p [innerHTML]="item.nombre"></p>
+                            </h5>
+                        </div>
+                    </a>
+
+                </div>
+            </div>
+        </ng-template>
+
+        <ng-template #vpost>
+            <div class="colum-list" *ngFor="let item of categoryList">
+                <div class="card" style="width: 18rem;">
+                    <a [routerLink]="['/gallery',item.idCategoriaPostal,sonLevel,category, item.nombre]">
+                        <img src="{{config.serverNodeLocation}}images/imageForCategory/{{item.imagenMenu}}/{{category}}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title" >
+                                <p [innerHTML]="item.nombre"></p>
+                            </h5>
+                        </div>
+                    </a>
+                    
+                </div>
+            </div>
+
+        </ng-template>
+        <ng-template #store>
+            <div class="colum-list" *ngFor="let item of categoryList">
+                <div class="card" style="width: 18rem;">
+                    <img src="{{config.serverNodeLocation}}images/imageForCategory/{{item.imagenMenu}}/{{category}}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title" [routerLink]="['/gallery',item.idTematica,sonLevel,category, item.nombre]">
+                            <p [innerHTML]="item.nombre"></p>
+                        </h5>
+                    </div>
+                </div>
+            </div>
+        </ng-template>
     </div>
 
 </section>
