--- a/src/assets/css/main_styles.css
+++ b/src/assets/css/main_styles.css
@@ -41,6 +41,15 @@
 2. Body and some general stuff
 *********************************/
 
+.modal-content {
+    width: max-content;
+}
+
+.modal-dialog {
+    display: flex;
+    justify-content: center;
+}
+
 * {
     margin: 0;
     padding: 0;
