--- a/src/app/generic/gallery-list/gallery-list.component.html
+++ b/src/app/generic/gallery-list/gallery-list.component.html
@@ -132,7 +132,7 @@
                 </button>
                 <div class="cui_row cui_div_zoom">
                     <div class="cui_row"
-                        style="background-color: #ffffff; padding: 20px; padding-bottom: 20px; border-radius: 5px;">
+                        style="background-color: #ffffff; padding: 20px; padding-bottom: 20px; border-radius: 5px; width: max-content;">
 
                         <a class="carousel-control-prev" (click)="preview('zoom')" role="button" data-slide="prev"
                             style="z-index: 1; ">
